# mcp-clinical-healthcare-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  test_mcp_tools.py
healthcare_data_pipeline/: README.md  checkpoint_manager.py  config.py  connection_manager.py  data_models.py  data_quality.py  deduplication.py  dlq_manager.py  ingest.py  metrics.py  models.py  pipeline.py  retry_handler.py  rxnav_extract.py  structured_logging.py  transform.py
infrastructure/: docker-compose.yml  manage_infrastructure.py
mcp_server_management/: server_control.py  setup_mcp_inspector.py  validate_server.py
src/agent/: __init__.py  config.py  mcp_client_base.py  mcp_client_factory.py  mcp_client_http.py  mcp_client_stdio.py  orchestrator.py  prompts.py
src/agent/conversation/: __init__.py  manager.py  persistence.py  session.py
src/cli/: main.py
src/config/: settings.py  tool_config.py
src/mcp_client/: __init__.py  config.py  mcp_client_factory.py  mcp_client_http.py  mcp_client_stdio.py
src/mcp_server/: README.md  exceptions.py  server.py  stdio_keepalive_wrapper.py
src/mcp_server/cache/: __init__.py  aggregation_cache.py  base_cache.py  cache_manager.py  field_schema_cache.py  prompt_cache.py  rbac_cache.py  session_cache.py
src/mcp_server/database/: async_executor.py  connection.py  database.py  query_optimization.py  sample_data.py
src/mcp_server/integrity/: tool_checks.py
src/mcp_server/security/: README.md  __init__.py  audit.py  authentication.py  authorization.py  config.py  data_minimization.py  middleware.py  projection_manager.py  rbac_config.py  validation.py
src/mcp_server/server_health_checks/: __init__.py  database_connection_health_checks.py  database_operational_health_checks.py  health_check_framework.py  mcp_tool_health_checks.py  security_validation_health_checks.py  system_performance_health_checks.py
src/mcp_server/tool_prompts/: __init__.py  analyze_conditions.json  analyze_drug_classes.json  get_financial_summary.json  get_medication_history.json  get_patient_clinical_timeline.json  search_drugs.json  search_patients.json  system_instructions.json
src/mcp_server/tools/: README.md  TOOLS_ORGANIZATION.md  __init__.py  analytics_tools.py  base_tool.py  contextual_tools.py  core_tools.py  models.py  patient_tools.py  tool_validator.py  utils.py
src/mcp_server/tools/_core/: __init__.py  database_introspection.py  query_execution.py  query_validation.py  result_serialization.py
src/mcp_server/tools/_healthcare/: __init__.py  analytics_tools.py  patient_tools.py
src/mcp_server/tools/_healthcare/clinical_data/: __init__.py  allergies.py  care_plans.py  condition_analytics.py  conditions.py  diagnostic_reports.py  immunizations.py  models.py  observations.py  procedures.py
src/mcp_server/tools/_healthcare/clinical_timeline/: __init__.py  models.py  patient_timeline.py
src/mcp_server/tools/_healthcare/demographics/: __init__.py  models.py  patient_search.py
src/mcp_server/tools/_mongodb/: __init__.py  aggregation_builder.py  bulk_operations.py  index_manager.py  query_patterns.py
src/observabilities/: __init__.py
src/observabilities/agent_execution/: README.md  __init__.py  execution_tracer.py  trace_analyzer.py  trace_models.py
src/observabilities/clinical_data_query/: README.md  __init__.py  query_context.py  query_models.py  query_tracer.py
src/observabilities/integrations/: __init__.py  async_buffer.py  context_managers.py  llamaindex_callbacks.py  mixins.py  tool_tracer.py  tool_wrappers.py
src/observabilities/utils/: __init__.py  exporter.py  visualization.py
tests/: conftest.py  manual_mcp_tools_test.py  test_agent.py  test_observability_integration.py  test_tools.py
tests/fixtures/: README.md  sample_patients.json
tests/integration/: __init__.py  test_matrix_generator.py
tests/unit/: test_exceptions.py
(+12 files in other folders)
