[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-to-mongodb"
version = "0.1.0"
description = "Text-to-MongoDB Query Language using MCP and LLM agents"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Text-to-MongoDB Team"}
]
keywords = ["mongodb", "mcp", "llm", "query", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core Dependencies
dependencies = [
    "fastmcp==2.13.0.2",
    "llama-index-core>=0.11.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-llms-anthropic>=0.3.0",
    "llama-index-tools-mcp>=0.1.0",
    "pymongo>=4.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "google-generativeai>=0.8.5",
    "jsonpath-ng>=1.6.0",
    "redis>=5.0.0",
    "hiredis>=3.0.0",
]

# Optional/Development Dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "pre-commit>=3.0.0",
]

[project.scripts]
text-to-mongodb = "src.cli.main:main"

# Build Configuration
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Tool Configurations

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "bson.*",
    "pymongo.*",
    "fastmcp.*",
    "llama_index.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

